--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,12 @@
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "plugins": [
+      {
+        "name": "typescript-styled-plugin"
+      }
+    ]
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "example"]
