--- a/example/package.json
+++ b/example/package.json
@@ -17,14 +17,19 @@
     "@types/node": "link:../node_modules/@types/node",
     "@types/react": "link:../node_modules/@types/react",
     "@types/react-dom": "link:../node_modules/@types/react-dom",
+    "highlight.js": "^10.3.2",
     "react": "link:../node_modules/react",
     "react-dom": "link:../node_modules/react-dom",
+    "react-highlight": "^0.12.0",
+    "react-og-buttons": "^1.1.0",
+    "react-og-forms": "link:..",
     "react-scripts": "link:../node_modules/react-scripts",
-    "typescript": "link:../node_modules/typescript",
-    "react-og-forms": "link:.."
+    "styled-components": "^5.2.1",
+    "typescript": "link:../node_modules/typescript"
   },
   "devDependencies": {
-    "@babel/plugin-syntax-object-rest-spread": "^7.8.3"
+    "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
+    "@types/react-highlight": "^0.12.2"
   },
   "eslintConfig": {
     "extends": "react-app"
